--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -4,6 +4,11 @@
 /* Palette Colori */
 /* Dimensioni (Width/Heigt) principali */
 /* Bordi e padding */
-/* Position Sticky Rules */
+:root {
+  /* Position Sticky Rules */
+  --sticky-top-left: 5.4rem;
+  --sticky-top-right: -18rem;
+}
+
 /* Modal Width & Height */
 /* Themes */
