--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,14 +1,16 @@
 /* Import font da Google */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 /* Font Family & Weight */
-/* Palette Colori */
-/* Dimensioni (Width/Heigt) principali */
-/* Bordi e padding */
 :root {
+  --primary-color-hue: 252;
   /* Position Sticky Rules */
   --sticky-top-left: 5.4rem;
   --sticky-top-right: -18rem;
+  --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
 }
 
+/* Palette Colori */
+/* Dimensioni (Width/Heigt) principali */
+/* Bordi e padding */
 /* Modal Width & Height */
 /* Themes */
