--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -52,7 +52,7 @@ img {
 }
 
 .btn-primary {
-    background: $color-primary;
+    background: var(--color-primary);
     color: $color-white;
 }
 /*#endregion */
