--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -8,11 +8,19 @@ $font-400: 400;
 $font-500: 500;
 $font-600: 600;
 
+:root {
+    --primary-color-hue: 252;
+    /* Position Sticky Rules */
+    --sticky-top-left: 5.4rem;
+    --sticky-top-right: -18rem;
+    --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
+}
+
 /* Palette Colori */
 $color-white: hsl(252, 30%, 100%);
 $color-light: hsl(252, 30%, 95%);
 $color-gray: hsl(252, 15%, 65%);
-$color-primary: hsl(252, 75%, 60%);
+// $color-primary: hsl(252, 75%, 60%);
 $color-secondary: hsl(252, 100%, 90%);
 $color-success: hsl(120, 95%, 65%);
 $color-danger: hsl(0, 95%, 65%);
@@ -28,13 +36,6 @@ $card-border-radius: 1rem;
 $btn-padding: 0.6rem 2rem;
 $search-padding: 0.6rem 1rem;
 $card-padding: 1rem;
-
-:root {
-    /* Position Sticky Rules */
-    --sticky-top-left: 5.4rem;
-    --sticky-top-right: -18rem;
-}
-
 
 /* Modal Width & Height */
 $modal-width: 100vw;
