--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,10 +4,15 @@
 /* Font Family & Weight */
 :root {
   --primary-color-hue: 252;
+  --dark-color-lightness: 17%;
+  --light-color-lightness: 95%;
   /* Position Sticky Rules */
   --sticky-top-left: 5.4rem;
   --sticky-top-right: -18rem;
   --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
+  --color-light: hsl(252, 30%, var(--light-color-lightness));
+  --color-dark: hsl(252, 30%, var(--dark-color-lightness));
+  --color-white: hsl(252, 30%, 100%);
 }
 
 /* Palette Colori */
@@ -31,8 +36,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  color: hsl(252deg, 30%, 17%);
-  background-color: hsl(252deg, 30%, 95%);
+  color: var(--color-dark);
+  background-color: var(--color-light);
   overflow-x: hidden;
 }
 
@@ -68,7 +73,7 @@ img {
 
 .btn-primary {
   background: var(--color-primary);
-  color: hsl(252deg, 30%, 100%);
+  color: var(--color-white);
 }
 
 /*#endregion */
