--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -59,7 +59,7 @@ main .container .left {
 
 main .container .left .profile {
     padding: $card-padding;
-    background: $color-white;
+    background: var(--color-white);
     border-radius: $card-border-radius;
     column-gap: 1rem;
     width: 100%;
@@ -67,7 +67,7 @@ main .container .left .profile {
 
 main .container .left .sidebar {
     margin-top: 1rem;
-    background: $color-white;
+    background: var(--color-white);
     border-radius: $border-radius;
 }
 
@@ -81,7 +81,7 @@ main .container .left .sidebar {
     }
     /* menu-item */
     .menu-item:hover {
-        background: $color-light;
+        background: var(--color-light);
     }
     .menu-item:first-child.active {
         border-top-left-radius: $card-border-radius;
@@ -103,7 +103,7 @@ main .container .left .sidebar {
     /* notification-count */
     i .notification-count {
         background: $color-danger;
-        color: $color-white;
+        color: var(--color-white);
         font-size: 0.7rem;
         width: fit-content;
         border-radius: 0.8rem;
@@ -119,7 +119,7 @@ main .container .left .sidebar {
     }
     /* Active link */
     .active {
-        background: $color-light;
+        background: var(--color-light);
     }
     .active i,
     .active h3 {
@@ -148,7 +148,7 @@ main .container .left .sidebar {
     top: 0;
     left: 110%;
     width: 30rem;
-    background: $color-white;
+    background: var(--color-white);
     border-radius: $card-border-radius;
     padding: $card-padding;
     box-sizing: 0 0 2rem var(--color-primary);
@@ -162,7 +162,7 @@ main .container .left .sidebar {
     width: 1.2rem;
     height: 1.2rem;
     display: block;
-    background: $color-white;
+    background: var(--color-white);
     position: absolute;
     left: -0.6rem;
     transform: rotate(45deg);
@@ -202,7 +202,7 @@ main .container .left .sidebar {
         padding: $card-padding;
         border-radius: $card-border-radius;
         flex-direction: column;
-        color: $color-white;
+        color: var(--color-white);
         font-size: 0.75rem;
         width: 100%;
         background: $color-danger;
@@ -241,7 +241,7 @@ main .container .left .sidebar {
 .middle .create-post {
     width: 100%;
     margin-top: 1rem;
-    background: $color-white;
+    background: var(--color-white);
     padding: 0.4rem $card-padding;
     border-radius: $border-radius;
 }
@@ -251,7 +251,7 @@ main .container .left .sidebar {
     text-align: left;
     padding-left: 1rem;
     background: transparent;
-    color: $color-dark;
+    color: var(--color-dark);
     margin-right: 1rem;
 }
 /*#endregion */
@@ -259,7 +259,7 @@ main .container .left .sidebar {
 /*#region Feeds */
 .middle .feeds {
     .feed {
-        background: $color-white;
+        background: var(--color-white);
         border-radius: $card-border-radius;
         padding: $card-padding;
         margin: 1rem 0;
@@ -299,7 +299,7 @@ main .container .left .sidebar {
         display: block;
         border-radius: 50%;
         overflow: hidden;
-        border: 2px solid $color-white;
+        border: 2px solid var(--color-white);
         margin-left: -0.6rem;
     }
     span:first-child {
@@ -326,7 +326,7 @@ main .container .left .sidebar {
 /*#region Messages  */
 
 .right .messages {
-    background: $color-white;
+    background: var(--color-white);
     border-radius: $card-border-radius;
     padding: $card-padding;
 
@@ -341,7 +341,7 @@ main .container .left .sidebar {
     /* Search-bar Classes */
     .search-bar {
         display: flex;
-        background: $color-light;
+        background: var(--color-light);
         border-radius: $border-radius;
         padding: $search-padding;
         margin-bottom: 1rem;
@@ -351,7 +351,7 @@ main .container .left .sidebar {
         width: 30vw;
         margin-left: 1rem;
         font-size: 0.9rem;
-        color: $color-dark;
+        color: var(--color-dark);
     }
     /* Categories Classes */
     .categories {
@@ -362,7 +362,7 @@ main .container .left .sidebar {
     .categories h6 {
         width: 100%;
         text-align: center;
-        border-bottom: 4px solid $color-light;
+        border-bottom: 4px solid var(--color-light);
         padding-bottom: 0.5rem;
         font-size: 0.85rem;
     }
@@ -394,7 +394,7 @@ main .container .left .sidebar {
         width: 0.8rem;
         height: 0.8rem;
         border-radius: 50%;
-        border: 3px solid $color-white;
+        border: 3px solid var(--color-white);
         background: $color-success;
         position: absolute;
         bottom: 0;
@@ -417,7 +417,7 @@ main .container .left .sidebar {
 }
 
 .right .request {
-    background: $color-white;
+    background: var(--color-white);
     padding: $card-padding;
     border-radius: $card-border-radius;
     margin-bottom: 0.7rem;
