--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -10,21 +10,23 @@ $font-600: 600;
 
 :root {
     --primary-color-hue: 252;
+    --dark-color-lightness: 17%;
+    --light-color-lightness: 95%;
+    --white-color-lightness: 100%;
     /* Position Sticky Rules */
     --sticky-top-left: 5.4rem;
     --sticky-top-right: -18rem;
     --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
+    --color-light: hsl(252, 30%, var(--light-color-lightness));
+    --color-dark: hsl(252, 30%, var(--dark-color-lightness));
+    --color-white: hsl(252, 30%, var(--white-color-lightness));
 }
 
 /* Palette Colori */
-$color-white: hsl(252, 30%, 100%);
-$color-light: hsl(252, 30%, 95%);
 $color-gray: hsl(252, 15%, 65%);
-// $color-primary: hsl(252, 75%, 60%);
 $color-secondary: hsl(252, 100%, 90%);
 $color-success: hsl(120, 95%, 65%);
 $color-danger: hsl(0, 95%, 65%);
-$color-dark: hsl(252, 30%, 17%);
 $color-black: hsl(252, 30%, 10%);
 
 /* Dimensioni (Width/Heigt) principali */
